[package]
name = "creak"
version = "0.4.0"
authors = ["Richard Mills <scripts.richard@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bunt = "0.2.4"
clap = "2"
ctrlc = "3"
dirs = "3.0"
notify-rust = "3"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.8"
